--- a/src/global.scss
+++ b/src/global.scss
@@ -34,4 +34,25 @@
 
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
-@import '@ionic/angular/css/palettes/dark.system.css';
+@import "@ionic/angular/css/palettes/dark.system.css";
+html {
+  --ion-default-font: "DM Sans", sans-serif !important;
+}
+.section-title {
+  font-size: 1rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+.footer {
+  border-top: 1px solid #eee;
+  padding: 12px 16px;
+  background: #fff;
+  border-top: 1px solid #d1d1d1;
+  border-top-left-radius: 1.5rem;
+  border-top-right-radius: 1.5rem;
+  .footer-buttons {
+    display: flex;
+    justify-content: space-between;
+    gap: 12px;
+  }
+}
