--- a/src/app/components/program-card/program-card.component.scss
+++ b/src/app/components/program-card/program-card.component.scss
@@ -1,19 +1,17 @@
 .featured-card {
-  border-radius: 1.5rem;
-  border: 1px solid #d1d1d1;
-  overflow: hidden;
-  height: 100%; /* Make card take full height of its container */
+  border-radius: 2rem;
+  border: 0.0625rem solid #d1d1d1;
   display: flex;
-  cursor: pointer;
   flex-direction: column;
+  height: 100%;
 
   .image-section {
     position: relative;
     height: 12.5rem;
-    margin: 0.5rem;
+    margin: 0.375rem;
 
     .main-image {
-      border-radius: 1rem;
+      border-radius: 1.5rem;
       width: 100%;
       height: 100%;
       object-fit: cover;
@@ -21,27 +19,27 @@
 
     .banner {
       position: absolute;
-      top: 1rem;
-      right: 1rem;
+      top: 0.75rem;
+      right: 0.75rem;
       background: #fff;
       color: #184ec9;
-      padding: 0.25rem 0.625rem;
+      padding: 0.25rem 0.5rem;
       border-radius: 1.25rem;
       display: flex;
       align-items: center;
       font-weight: 500;
       font-size: 0.75rem;
 
-      ion-icon {
-        margin-right: 0.375rem;
-        font-size: 1rem;
+      img {
+        margin-right: 0.25rem;
+        width: 1rem;
       }
     }
 
-    .profile-image {
+    .university-image {
       position: absolute;
-      bottom: 1rem;
-      left: 1rem;
+      bottom: 0.75rem;
+      left: 0.75rem;
       width: 3rem;
       height: 3rem;
       border-radius: 0.75rem;
@@ -52,31 +50,39 @@
 
   ion-card-content {
     padding: 1rem;
-    flex: 1;
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
+    font-weight: 400;
+    font-size: 0.8125rem;
 
     .card-title {
       font-size: 1.125rem;
-      font-weight: 600;
+      font-weight: 500;
       margin-bottom: 0.5rem;
       color: #333;
       display: -webkit-box;
+      cursor: pointer;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       overflow: hidden;
       text-overflow: ellipsis;
+
+      &:hover {
+        color: #184ec9;
+      }
     }
 
     .info-line {
       display: flex;
       align-items: center;
-      font-size: 0.875rem;
       color: #555;
       margin: 0.25rem 0;
 
-      ion-icon {
+      ion-icon,
+      img {
         margin-right: 0.375rem;
+        width: 1rem;
       }
 
       .text-truncate {
@@ -95,13 +101,17 @@
       .option {
         display: flex;
         align-items: center;
-        font-size: 0.8125rem;
         color: #666;
         white-space: nowrap;
 
         ion-icon {
           margin-right: 0.25rem;
           font-size: 1rem;
+        }
+
+        img {
+          width: 1rem;
+          margin-right: 0.25rem;
         }
       }
     }
@@ -111,7 +121,7 @@
       justify-content: space-between;
       align-items: center;
       font-size: 1rem;
-      margin-top: auto; /* Push to bottom */
+      margin-top: auto; // Push to bottom
       padding-top: 0.5rem;
 
       .price {
