Update made to the application

--- a/src/app/components/filter-modal/filter-modal.component.html
+++ b/src/app/components/filter-modal/filter-modal.component.html
@@ -44,42 +44,72 @@
 
   <!-- Filter Options -->
   <section class="filter-section">
-    <ion-item button detail lines="full" (click)="openIndividualFilter()">
+    <ion-item
+      button
+      detail
+      lines="full"
+      (click)="openIndividualFilter('Institutes')"
+    >
       <ion-label class="label-stack">
         <div class="label-title">Institutes</div>
         <div class="label-subtitle">None selected</div>
       </ion-label>
     </ion-item>
 
-    <ion-item button detail lines="full" (click)="openIndividualFilter()">
+    <ion-item
+      button
+      detail
+      lines="full"
+      (click)="openIndividualFilter('Education Level')"
+    >
       <ion-label class="label-stack">
         <div class="label-title">Education Level</div>
         <div class="label-subtitle">None selected</div>
       </ion-label>
     </ion-item>
 
-    <ion-item button detail lines="full" (click)="openIndividualFilter()">
+    <ion-item
+      button
+      detail
+      lines="full"
+      (click)="openIndividualFilter('Country')"
+    >
       <ion-label class="label-stack">
         <div class="label-title">Country</div>
         <div class="label-subtitle">None selected</div>
       </ion-label>
     </ion-item>
 
-    <ion-item button detail lines="full" (click)="openIndividualFilter()">
+    <ion-item
+      button
+      detail
+      lines="full"
+      (click)="openIndividualFilter('Discipline')"
+    >
       <ion-label class="label-stack">
         <div class="label-title">Discipline</div>
         <div class="label-subtitle">None selected</div>
       </ion-label>
     </ion-item>
 
-    <ion-item button detail lines="full" (click)="openIndividualFilter()">
+    <ion-item
+      button
+      detail
+      lines="full"
+      (click)="openIndividualFilter('Study Language')"
+    >
       <ion-label class="label-stack">
         <div class="label-title">Study Language</div>
         <div class="label-subtitle">None selected</div>
       </ion-label>
     </ion-item>
 
-    <ion-item button detail lines="none" (click)="openIndividualFilter()">
+    <ion-item
+      button
+      detail
+      lines="none"
+      (click)="openIndividualFilter('Attendance')"
+    >
       <ion-label class="label-stack">
         <div class="label-title">Attendance</div>
         <div class="label-subtitle">None selected</div>
