Updated the custom button component

--- a/src/app/components/custom-button/custom-button.component.html
+++ b/src/app/components/custom-button/custom-button.component.html
@@ -1,4 +1,14 @@
-<ion-button shape="round" class="btn" [class]="color" (click)="handleClick()">
-  <ion-icon *ngIf="showIcon" [slot]="position" [name]="getButtonIcon()"></ion-icon>
+<ion-button
+  shape="round"
+  class="btn"
+  [class]="color"
+  (click)="handleClick()"
+  [disabled]="disable"
+>
+  <ion-icon
+    *ngIf="showIcon"
+    [slot]="position"
+    [name]="getButtonIcon()"
+  ></ion-icon>
   {{ getButtonText() }}
 </ion-button>
